# ciri-chargeback-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  api.http  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
api/: Dockerfile  pyproject.toml
api/app/: config.py  dependencies.py  main.py
api/app/analysis/: analyzer.py
api/app/data/: db.py  loader.py
api/app/domain/: constants.py  enums.py  models.py
api/app/llm/: client.py  parsing.py
api/app/llm/prompts/: __init__.py  v1_judge.py  v1_log_analysis.py  v1_policy_eval.py  v1_resolution.py
api/app/observability/: tracer.py
api/app/rag/: embedder.py  formatter.py  indexer.py  retriever.py  updater.py
api/app/reports/: generator.py
api/app/reports/templates/: case_report.html  test_panel.html
api/app/routes/: analytics.py  analyze.py  cache.py  cases.py  clients.py  feedback.py  health.py  langfuse.py  logs.py  merchants.py  panel.py  policies.py  reports.py  sla.py  transactions.py
api/app/services/: feedback.py  langfuse_stats.py  pipeline.py  resolution.py
data/: Similación_dataset_contracargos_.xlsx
docs/: architecture.md  architecture_map.html  decisions.md  demo_scenarios.md  mejora_continua.md  prompts.md  rag_explanation.md  workflow_diagram.html
docs/examples/: report_TXN-00010.html  report_TXN-00025.html  report_TXN-00030.html  (+5 more)
n8n/: chargeback_agent_flow.json  workflow_ciri_agent.json  workflow_ciri_errors.json  workflow_ciri_form.json
scripts/: fix_vars.py  seed_data.py  sync_n8n.py  update_workflow.py
tests/: conftest.py
(+22 files in other folders)
