[project]
name = "ciri-chargeback-agent"
version = "1.0.0"
description = "Intelligent Chargeback Investigation Agent for CIRI fintech"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "langfuse>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
